--- a/VintedProject/pom.xml
+++ b/VintedProject/pom.xml
@@ -17,8 +17,14 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version></dependency>
 
 		<dependency>
+
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
