--- a/VintedProject/pom.xml
+++ b/VintedProject/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>assertj-core</artifactId>
             <version>3.23.1</version>
         </dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
