--- a/VintedProject/pom.xml
+++ b/VintedProject/pom.xml
@@ -64,6 +64,13 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.4</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
