--- a/VintedProject/pom.xml
+++ b/VintedProject/pom.xml
@@ -71,6 +71,12 @@
 			<version>1.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>6.1.0</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
