--- a/VintedProject/pom.xml
+++ b/VintedProject/pom.xml
@@ -130,6 +130,17 @@
 			<version>2.2.1.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20220924</version>
+		</dependency>
+
+
 	</dependencies>
 
 
