--- a/VintedAndroid/app/build.gradle
+++ b/VintedAndroid/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.5'
     implementation 'org.modelmapper:modelmapper:2.4.4'
     implementation 'org.springframework:spring-context:5.3.9'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     var room_version = "2.5.1"
 
