Added comments and camps in Internationalization
Non è stato modificato il codice, solo commenti e campi per l'internazionalizzazione. Il mio inglese fa schifo, sentitevi liberi di modificare il tutto come vi pare.

--- a/VintedProject/src/main/resources/application.properties
+++ b/VintedProject/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+#Impostazioni del DATABASE. In ordine:
+# Path al DB,
+# Username,
+# Password,
+# modalità del database (può essere tra le altre cose: none, update, create, create-drop),
+# mostra l'sql sul terminale,
+# dialetto del DB
 spring.datasource.url=jdbc:postgresql://localhost:15432/vinted
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -5,14 +12,23 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+#mette il server in ascolto sulla porta 8010
 server.port=8010
 
-
+#Internazionalizzazione
 spring.messages.basename=messages, i18n.list
 spring.messages.fallback-to-system-locale=false
 
+#Permette l'override dei Bean. Nel nostro progetto è RICHIESTO, altrimenti non parte
 spring.main.allow-bean-definition-overriding=true
 
+#Configurazione per l'email. In ordine:
+# Server SMTP,
+# porta del server SMTP,
+# Username,
+# Password,
+# Autenticazione al server SMTP abilitata/disabilitata,
+# Connessione col server SMTP in TLS
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vintedproject09@gmail.com
