add Una mezza base

--- a/VintedAndroid/app/build.gradle
+++ b/VintedAndroid/app/build.gradle
@@ -49,6 +49,10 @@ android {
 }
 
 dependencies {
+    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation "androidx.compose.material:material:1.0.3"
+    implementation "androidx.compose.ui:ui:1.0.3"
+    implementation "androidx.compose.ui:ui-tooling:1.0.3"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -71,6 +75,7 @@ dependencies {
     implementation 'org.springframework:spring-context:5.3.9'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 
     var room_version = "2.5.1"
 
