--- a/VintedAndroid/app/build.gradle
+++ b/VintedAndroid/app/build.gradle
@@ -54,6 +54,13 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.0.3"
     implementation "androidx.compose.ui:ui-tooling:1.0.3"
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
+    implementation "com.squareup.moshi:moshi-adapters:1.11.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    testImplementation "io.kotlintest:kotlintest:2.0.7"
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
