add -profile -cose

--- a/VintedProject/tsconfig.json
+++ b/VintedProject/tsconfig.json
@@ -19,6 +19,9 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
