--- a/VintedProject/package.json
+++ b/VintedProject/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@ngx-translate/core": "^14.0.0",
     "angular-jwt": "^0.1.11",
     "jsonwebtoken": "^9.0.1",
     "keycloak-angular": "^14.0.0",
     "keycloak-js": "^21.1.2",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.5.0",
+    "stream-chat": "^8.10.1",
+    "stream-chat-angular": "^4.32.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
