--- a/VintedAndroid/local.properties
+++ b/VintedAndroid/local.properties
@@ -4,10 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 19 13:06:58 CEST 2023
-
-#WINDOWS
-#sdk.dir=C\:\\Users\\ville\\AppData\\Local\\Android\\Sdk
-
-#LINUX
-sdk.dir=/home/fra/Android/Sdk
+#Thu Sep 07 14:34:27 CEST 2023
+sdk.dir=C\:\\Users\\umby1\\AppData\\Local\\Android\\Sdk
