--- a/VintedAndroid/local.properties
+++ b/VintedAndroid/local.properties
@@ -5,4 +5,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Sep 07 14:34:27 CEST 2023
-sdk.dir=C\:\\Users\\umby1\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\umby1\\AppData\\Local\\Android\\Sdk
+
+sdk.dir=/home/fra/Android/Sdk
