mi ero dimenticato solo di aggiungere il token alle api delle chat

--- a/VintedAndroid/local.properties
+++ b/VintedAndroid/local.properties
@@ -4,7 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 07 14:34:27 CEST 2023
-#sdk.dir=C\:\\Users\\umby1\\AppData\\Local\\Android\\Sdk
-
-sdk.dir=/home/fra/Android/Sdk
+#Fri Sep 08 01:43:59 CEST 2023
+sdk.dir=C\:\\Users\\umby1\\AppData\\Local\\Android\\Sdk
