--- a/VintedAndroid/local.properties
+++ b/VintedAndroid/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 08 14:42:07 CEST 2023
-sdk.dir=/home/fra/Android/Sdk
+#Fri Sep 08 20:39:46 CEST 2023
+sdk.dir=C\:\\Users\\umby1\\AppData\\Local\\Android\\Sdk
